--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
-<p>
-  dashboard works!
-</p>
+<div class="row">
+  <div class="col-5">
+    Five columns
+  </div>
+  <div class="col-7">
+    Seven columns
+  </div>
+</div>
