--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,3 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.row {
+  margin: 0 30px; }
 
-@import 'app/app.component';
+/*# sourceMappingURL=styles.css.map */
