--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-5">
-    Five columns
+    <app-top-salesperson></app-top-salesperson>
   </div>
   <div class="col-7">
     Seven columns
