--- a/src/app/top-salesperson/top-salesperson.component.html
+++ b/src/app/top-salesperson/top-salesperson.component.html
@@ -1,3 +1,23 @@
-<p>
-  top-salesperson works!
-</p>
+<div class="content">
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Commercial du mois</th>
+        <th scope="col">Score</th>
+        <th scope="col">Gagnés</th>
+        <th scope="col">Mis à jour</th>
+        <th scope="col">Perdus</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row"><img src="../assets/img/account/profile-img.png"><i class="fas fa-arrow-up"></i> Vincent DUMONT</th>
+        <td><span class="bulle">26</span></td>
+        <td>5</td>
+        <td>24</td>
+        <td>3</td>
+      </tr>
+      <tr>
+    </tbody>
+  </table>
+</div>
