--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,12 @@
 
 @import 'app/app.component';
 @import 'app/dashboard/dashboard.component';
+
+
+.content {
+    background-color: transparent;
+    -moz-box-shadow: 0px 1px 5px 0px #b3b3b3;
+    -webkit-box-shadow: 0px 1px 5px 0px #b3b3b3;
+    -o-box-shadow: 0px 1px 5px 0px #b3b3b3;
+    box-shadow: 0px 1px 5px 0px #b3b3b3;
+}
