Composant performance map

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-5">
+    <app-performance-map></app-performance-map>
     <app-top-salesperson></app-top-salesperson>
   </div>
   <div class="col-7">
