--- a/src/app/performance-map/performance-map.component.html
+++ b/src/app/performance-map/performance-map.component.html
@@ -1,3 +1,6 @@
-<p>
-  performance-map works!
-</p>
+<div class="content">
+  <div class="top-title">
+    <p>Performances par département</p>
+    <i class="fas fa-ellipsis-h"></i>
+  </div>
+</div>
