--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,11 @@
 
 @import 'app/app.component';
 @import 'app/dashboard/dashboard.component';
+@import 'app/performance-map/performance-map.component';
 
+.row {
+    margin: 0 30px;
+}
 
 .content {
     background-color: transparent;
@@ -10,4 +14,11 @@
     -webkit-box-shadow: 0px 1px 5px 0px #b3b3b3;
     -o-box-shadow: 0px 1px 5px 0px #b3b3b3;
     box-shadow: 0px 1px 5px 0px #b3b3b3;
+}
+
+.top-title {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 0 10px;
 }
