--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,19 @@
 <div class="row">
   <div class="col-5">
-    Five columns
+    <div class="dashboard">
+      <div>
+          <img class="logo" [src]="logoHafa">
+      </div>
+      <div class="presentation">
+          <h3>Mercedi 23 septembre 2019</h3>
+          <div class="titre">
+              <h2>PERFORMANCE COMMERCIALE</h2>
+              <h1>TABLEAU DE BORD</h1>
+          </div>
+        </div>
+    </div>
+    <div>
+    </div>
   </div>
   <div class="col-7">
     Seven columns
