--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,35 @@
-html {
-    background-color: blue;
+
+
+.presentation{
+    margin-left: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 2%
+}
+
+.dashboard{
+    background-color: white;
+    display: flex;
+    height: 140px;
+    
+
+}
+
+h3{
+    font-size: 17px;
+    color: #CF1740;
+}
+
+h2{
+    font-size: 18px;
+    margin-bottom: 0px;
+}
+
+h1{
+    font-size: 35px;
+}
+
+.logo{
+    height: 120px;
 }
