--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,8 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 .row {
-  margin: 0 30px; }
+  margin: 30px 30px;
+}
 
-html {
-  background-color: blue; }
+.presentation {
+  margin-left: 45px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-top: 2%;
+}
+
+.dashboard {
+  background-color: white;
+  display: flex;
+  height: 140px;
+}
+
+h3 {
+  font-size: 17px;
+  color: #CF1740;
+}
+
+h2 {
+  font-size: 18px;
+  margin-bottom: 0px;
+}
+
+h1 {
+  font-size: 35px;
+}
+
+.logo {
+  height: 120px;
+}
 
 /*# sourceMappingURL=styles.css.map */
