Modif composant integration

--- a/src/app/top-salesperson/top-salesperson.component.html
+++ b/src/app/top-salesperson/top-salesperson.component.html
@@ -11,7 +11,7 @@
     </thead>
     <tbody>
       <tr>
-        <th scope="row"><img src="../assets/img/account/profile-img.png"><i class="fas fa-arrow-up"></i> Vincent DUMONT</th>
+        <td scope="row"><img src="../assets/img/account/profile-img.png"><i class="fas fa-arrow-up"></i> Vincent DUMONT</td>
         <td><span class="bulle">26</span></td>
         <td>5</td>
         <td>24</td>
