commencement de l'intégration des composants statistiques et des performances opérations

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,9 @@
     <app-top-salesperson></app-top-salesperson>
   </div>
   <div class="col-7">
-    Seven columns
+    <div class ="statsPerf">
+        <app-statistics></app-statistics>
+        <app-perf-operation></app-perf-operation>
+    </div>
   </div>
 </div>
