--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -15,6 +15,7 @@
 h3 {
     font-size: 17px;
     color: #CF1740;
+    font-weight: 600;
 }
 
 h2 {
@@ -28,4 +29,8 @@ h1 {
 
 .logo {
     height: 120px;
+}
+
+.statsPerf{
+    display: flex;
 }
