--- a/src/app/one-statistic/one-statistic.component.html
+++ b/src/app/one-statistic/one-statistic.component.html
@@ -1,3 +1,15 @@
-<p>
-  one-statistic works!
-</p>
+<div class="content">
+
+  <div class = "partSup">
+      <i class="fas fa-user-friends fa-lg"></i>
+    <span class ="taux">
+      +12%
+    </span>
+  </div>
+  <span class = "effectif">
+    32
+  </span>
+  <span id ="libelle">
+    Nouveaux contacts
+  </span>
+</div>
