--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,3 +1,11 @@
-<p>
-  statistics works!
-</p>
+
+<div class ="statistiques">
+  <app-one-statistic></app-one-statistic>
+  <app-one-statistic></app-one-statistic>
+  <app-one-statistic></app-one-statistic>
+  <app-one-statistic></app-one-statistic>
+  <app-one-statistic></app-one-statistic>
+  <app-one-statistic></app-one-statistic>
+  <app-one-statistic></app-one-statistic>
+  <app-one-statistic></app-one-statistic>
+</div>
