--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,10 +23,10 @@ p {
 
 .content {
     background-color: transparent;
-    -moz-box-shadow: 0px 1px 5px 0px #b3b3b3;
-    -webkit-box-shadow: 0px 1px 5px 0px #b3b3b3;
-    -o-box-shadow: 0px 1px 5px 0px #b3b3b3;
-    box-shadow: 0px 1px 5px 0px #b3b3b3;
+    -moz-box-shadow: 0px 1px 5px 0px #dddddd;;
+    -webkit-box-shadow: 0px 1px 5px 0px #dddddd;
+    -o-box-shadow: 0px 1px 5px 0px #dddddd;
+    box-shadow: 0px 1px 5px 0px #dddddd;
 }
 
 .top-title {
