--- a/src/app/perf-operation/perf-operation.component.html
+++ b/src/app/perf-operation/perf-operation.component.html
@@ -1,5 +1,5 @@
-<div class ="content">
-<span class = "perf">
-  Performance des opérations
-</span>
+<div class="content content-stat">
+  <span class="perf">
+    Performance des opérations
+  </span>
 </div>
