--- a/src/app/perf-operation/perf-operation.component.scss
+++ b/src/app/perf-operation/perf-operation.component.scss
@@ -1,12 +1,13 @@
-.content{
-    height: 330px;
-    width: 330px;
+.content-stat {
+    height: 275px;
+    width: 295px;
     margin-top: 10px;
-}
+    margin-left: 20px;
 
-.perf{
-    font-size: 14px;
-    font-weight: 600;
-    color: rgb(114, 114, 114);
-    margin-left:25px;
+    .perf {
+        font-size: 14px;
+        font-weight: 600;
+        color: rgb(114, 114, 114);
+        margin-left:25px;
+    }
 }
