--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-5">
+  <div class="col-left">
     <div class="dashboard">
       <div>
           <img class="logo" [src]="logoHafa">
@@ -17,10 +17,11 @@
     <app-performance-map></app-performance-map>
     <app-top-salesperson></app-top-salesperson>
   </div>
-  <div class="col-7">
-    <div class ="statsPerf">
+  <div class="col-right">
+    <div class="statsPerf">
         <app-statistics></app-statistics>
         <app-perf-operation></app-perf-operation>
     </div>
+    <app-quality-crm></app-quality-crm>
   </div>
 </div>
