--- a/src/app/one-statistic/one-statistic.component.scss
+++ b/src/app/one-statistic/one-statistic.component.scss
@@ -1,34 +1,38 @@
 .content{
-    height: 150px;
-    width: 150px;
+    height: 125px;
+    width: 125px;
     margin-top: 10px;
-    margin-right: 30px;
+    margin-right: 15px;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     text-align: center;
 }
 
-#libelle{
-    font-size: 13px;
+#libelle {
+    font-size: 11px;
     font-weight: 500;
     color: rgb(143, 143, 143);
 }
 
-.effectif{
-    font-size: 35px;
+.effectif {
+    font-size: 30px;
     font-weight: 500;
     color: rgb(109, 109, 109);
 }
 
-.taux{
-    font-size: 14px;
-    color: rgb(1, 167, 23);
-    font-weight: 500;
-}
-
-.partSup{
+.partSup {
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    i {
+        font-size: 11px;
+    }
+
+    .taux {
+        font-size: 12px;
+        color: rgb(1, 167, 23);
+        font-weight: 500;
+    }
 }
