--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="col-right">
     <div class="statsPerf">
-        <app-statistics></app-statistics>
+        <app-statistics [apiConnection]='apiConnection'></app-statistics>
         <app-perf-operation></app-perf-operation>
     </div>
     <app-quality-crm></app-quality-crm>
