--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -4,7 +4,7 @@
   <app-one-statistic></app-one-statistic>
   <app-one-statistic></app-one-statistic>
   <app-one-statistic></app-one-statistic>
-  <app-one-statistic></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='5'></app-one-statistic>
   <app-one-statistic></app-one-statistic>
   <app-one-statistic></app-one-statistic>
   <app-one-statistic></app-one-statistic>
