--- a/src/app/connection/connection.component.html
+++ b/src/app/connection/connection.component.html
@@ -1,8 +1,20 @@
-<div>
-  <label>Email</label>
-  <input #username name="username" value="" type="text">
-  <label>Password</label>
-  <input #password name="password" value="" type="password">
-  <button (click)="connexion(username.value, password.value)">Connexion</button>
-  <p id="errorMessage"></p>
+<div class="login-page">
+  <div class="block-login">
+
+    <img class="logo" src="/assets/img/logoHafa.png">
+
+    <div class="element-login">
+        <label>E-mail</label>
+        <input #username name="username" value="" type="text">
+    </div>
+    <div class="element-login">
+        <label>Mot de passe</label>
+        <input #password name="password" value="" type="password">
+    </div>
+
+    <button (click)="connexion(username.value, password.value)">Connexion</button>
+    <p id="errorMessage"></p>
+
+    <p class="footer">Smartleads © tous droits réservés</p>
+  </div>
 </div>
