integration de l'entete

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-left">
     <div class="dashboard">
-      <div>
+      <div class="logoRetour">
           <img class="logo" [src]="logoHafa">
+          <a class="retour" href=#>RETOUR</a>
       </div>
       <div class="presentation">
           <h3>Mercedi 23 septembre 2019</h3>
