--- a/src/app/top-salesperson/top-salesperson.component.scss
+++ b/src/app/top-salesperson/top-salesperson.component.scss
@@ -1,4 +1,12 @@
 table {
+
+    tbody {
+        border-top: solid red 2px;
+        tr {
+            
+        }
+    }
+
     thead {
         th {
             color: #B3B3B3;
