--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -13,29 +13,49 @@
     margin-left: 45px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    margin-top: 2%
+    justify-content: space-between;
+    height: 100px;
+    margin-top: 2%;
+
+    h3 {
+        font-size: 13px;
+        color: #CF1740;
+        font-weight: 600;
+    }
+    .titre {
+        h2 {
+            font-size: 15px;
+            margin-bottom: 0px;
+        }
+        
+        h1 {
+            font-size: 30px;
+        }
+    }
 }
 
 .dashboard {
     background-color: white;
     display: flex;
     height: 140px;
-}
 
-h3 {
-    font-size: 17px;
-    color: #CF1740;
-    font-weight: 600;
-}
+    .logoRetour {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .retour {
+            background-color: #00b900;
+            color: white;
+            font-size: 8px;
+            padding: 3px 10px;
+            border-radius: 20px;
+            width: 49px;
+        }
 
-h2 {
-    font-size: 18px;
-    margin-bottom: 0px;
-}
-
-h1 {
-    font-size: 30px;
+        .retour:hover {
+            background-color: #008300;
+        }
+    }
 }
 
 .logo {
