UPD: Integration with apexcharts

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,6 +22,7 @@
         <app-statistics [apiConnection]='apiConnection'></app-statistics>
         <app-perf-operation></app-perf-operation>
     </div>
+    <app-monitoring></app-monitoring>
     <app-quality-crm></app-quality-crm>
   </div>
 </div>
