--- a/src/app/perf-operation/perf-operation.component.html
+++ b/src/app/perf-operation/perf-operation.component.html
@@ -1,5 +1,9 @@
-<div class="content content-stat">
-  <span class="perf">
-    Performance des opérations
-  </span>
+<div class="content">
+  <div class="dash-perf-operation">
+    <div class="dash-top">
+          <h4>Performances des opérations</h4>
+          <i class="fas fa-ellipsis-h"></i>
+      </div>
+      <div id="chart"></div>
+  </div>
 </div>
