--- a/src/app/performance-map/performance-map.component.html
+++ b/src/app/performance-map/performance-map.component.html
@@ -7,7 +7,7 @@
     <div class="france-map">
         <div class="row">
             <div class="col-9">
-                <div id="francemap" style=""></div>
+                <div id="francemap"></div>
             </div>
             <div class="col-3 score">
                 <p>Score</p>
@@ -37,5 +37,4 @@
             </div>
         </div>
     </div>
-  </div>
 </div>
