--- a/src/app/performance-map/performance-map.component.scss
+++ b/src/app/performance-map/performance-map.component.scss
@@ -1,8 +1,11 @@
 .dash-france-map {
+    height: 100%;
 
     .france-map {
+        height: 100%;
         svg {
             margin-left: -60px;
+            height: 569px;
         }
 
         .score {
