--- a/src/app/perf-operation/perf-operation.component.scss
+++ b/src/app/perf-operation/perf-operation.component.scss
@@ -1,13 +1,10 @@
-.content-stat {
-    height: 275px;
-    width: 295px;
-    margin-top: 10px;
-    margin-left: 20px;
+#chart {
+    margin-top: -30px;
+    min-height: 331px !important;
+    width: 440px;
 
-    .perf {
-        font-size: 14px;
-        font-weight: 600;
-        color: rgb(114, 114, 114);
-        margin-left:25px;
+    .apexcharts-legend-text {
+        margin-left: 10px;
+        font-weight: bold;
     }
 }
