Mise en place carré stats

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
           <img class="logo" [src]="logoHafa">
       </div>
       <div class="presentation">
-          <h3>Mercedi 23 septembre 2019</h3>
+          <h3>{{ dateJour }}</h3>
           <div class="titre">
               <h2>PERFORMANCE COMMERCIALE</h2>
               <h1>TABLEAU DE BORD</h1>
