--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -1,11 +1,11 @@
 
 <div class ="statistiques">
-  <app-one-statistic></app-one-statistic>
-  <app-one-statistic></app-one-statistic>
-  <app-one-statistic></app-one-statistic>
-  <app-one-statistic></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='1'></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='2'></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='3'></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='4'></app-one-statistic>
   <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='5'></app-one-statistic>
-  <app-one-statistic></app-one-statistic>
-  <app-one-statistic></app-one-statistic>
-  <app-one-statistic></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='6'></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='7'></app-one-statistic>
+  <app-one-statistic [apiConnection]='apiConnection' [dataToCall]='8'></app-one-statistic>
 </div>
