--- a/src/app/one-statistic/one-statistic.component.html
+++ b/src/app/one-statistic/one-statistic.component.html
@@ -1,9 +1,9 @@
 <div class="content">
   <div class="partSup">
-    <i class="fas fa-user-friends fa-lg"></i>
+    <i class="fas fa-user-friends fa-lg" *ngIf="logo != null"></i>
     <div *ngIf="data != null">
-      <span class="taux" *ngIf="data.taux != undefined">
-        +12%
+      <span class="taux" *ngIf="data.pourcent != undefined">
+        {{data.pourcent}}%
       </span>
     </div>
 
