--- a/src/app/monitoring/monitoring.component.scss
+++ b/src/app/monitoring/monitoring.component.scss
@@ -1,3 +1,7 @@
+.dash-indicateur-perf {
+    margin-top: 20px;
+}
+
 .menu-indicateur-perf {
     .nav {
         flex-direction: column;
@@ -26,6 +30,7 @@
 }
 
 .indic-perf {
+    margin-top: 20px;
     .row {
         margin: 0;
 
