ADD: Voir description
Mise en place message erreurs connexion
Mise en place loader connexion
Mise en place loader carrés statistiques

--- a/src/app/connection/connection.component.scss
+++ b/src/app/connection/connection.component.scss
@@ -62,3 +62,12 @@
         }
     }
 }
+
+.loader-connection {
+    width: 350px;
+    background-color: white;
+}
+
+.red-text {
+    color: red;
+}
