--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,3 +25,10 @@
     <app-quality-crm></app-quality-crm>
   </div>
 </div>
+
+<div class="modal fade show" id="modalLoader" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <label>Chargement des données en cours.</label>
+    <img src="../../assets/loader.gif"/>
+  </div>
+</div>
