--- a/src/app/monitoring/monitoring.component.scss
+++ b/src/app/monitoring/monitoring.component.scss
@@ -15,11 +15,10 @@
             }
             
             a {
-                padding: 15px;
+                padding: 20px;
                 color: #999999;
                 font-weight: 500;
                 border-radius: 0;
-                font-size: 10px;
 
                 &.active {
                     background-color: transparent;
@@ -31,6 +30,7 @@
 }
 
 .indic-perf {
+    margin-top: 20px;
     .row {
         margin: 0;
 
