FIX: Component and add map france

--- a/src/app/performance-map/performance-map.component.html
+++ b/src/app/performance-map/performance-map.component.html
@@ -7,6 +7,7 @@
     <div class="france-map">
         <div class="row">
             <div class="col-8">
+                <img class="svg-france" src="../../assets/img/france-departments.svg">
             </div>
             <div class="col-4 score">
                 <p>Score</p>
