--- a/src/app/top-salesperson/top-salesperson.component.html
+++ b/src/app/top-salesperson/top-salesperson.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <table class="table">
+  <table class="table top-salesperson">
     <thead>
       <tr>
         <th scope="col">Commercial du mois</th>
