--- a/src/app/performance-map/performance-map.component.scss
+++ b/src/app/performance-map/performance-map.component.scss
@@ -3,9 +3,10 @@
 
     .france-map {
         height: 100%;
-        svg {
-            margin-left: -60px;
-            height: 569px;
+        
+        .svg-france {
+            width: 130%;
+            margin-left: -40px;
         }
 
         .score {
