--- a/src/app/quality-crm/quality-crm.component.html
+++ b/src/app/quality-crm/quality-crm.component.html
@@ -1,45 +1,53 @@
 <div class="content">
-  <div class="dash-window-block">
-    <div class="dash-stats-quality">
-        <div class="circle-quality">
-            <div id="chart-circle"></div>
-        </div>
-        <div class="chrono-quality">
-            <div class="box-quality">
-                <span class="periode-quality"> < 3 ans et + </span>
-                <div class="trait-rouge-quality"></div>
-                <span class="nb-contact-quality"> contacts</span>
-                <span class="pourcentage-quality">%</span>
-            </div>
-            <i class="fas fa-arrow-right fa-lg"></i>
-            <div class="box-quality">
-                <span class="periode-quality"> < 2ans </span>
-                <div class="trait-orange-quality"></div>
-                <span class="nb-contact-quality"> contacts</span>
-                <span class="pourcentage-quality">%</span>
-            </div>
-            <i class="fas fa-arrow-right fa-lg"></i>
-            <div class="box-quality">
-                <span class="periode-quality"> < 1 an </span>
-                <div class="trait-jaune-quality"></div>
-                <span class="nb-contact-quality"> contacts</span>
-                <span class="pourcentage-quality">%</span>
-            </div>
-            <i class="fas fa-arrow-right fa-lg"></i>
-            <div class="box-quality">
-                <span class="periode-quality"> < 6 mois </span>
-                <div class="trait-vert-quality"></div>
-                <span class="nb-contact-quality"> contacts</span>
-                <span class="pourcentage-quality">%</span>
-            </div>
-            <i class="fas fa-arrow-right fa-lg"></i>
-            <div class="box-quality">
-                <span class="periode-quality"> < 3 mois </span>
-                <div class="trait-vert-fonce-quality"></div>
-                <span class="nb-contact-quality"> contacts</span>
-                <span class="pourcentage-quality">%</span>
-            </div>
-        </div>
+    <div class="dash-window-block">
+      <div class="dash-stats-quality" *ngIf="loading == false; else loader">
+          <div class="circle-quality">
+              <div id="chart-circle"></div>
+          </div>
+          <div class="chrono-quality">
+              <div class="box-quality">
+                  <span class="periode-quality"> < 3 ans et + </span>
+                  <div class="trait-rouge-quality"></div>
+                  <span class="nb-contact-quality"> {{ data.value.threeyears }} contacts</span>
+                  <span class="pourcentage-quality">{{ data.value.threeYearsPourcent }}%</span>
+              </div>
+              <i class="fas fa-arrow-right fa-lg"></i>
+              <div class="box-quality">
+                  <span class="periode-quality"> < 2ans </span>
+                  <div class="trait-orange-quality"></div>
+                  <span class="nb-contact-quality"> {{ data.value.twoyears }}contacts</span>
+                  <span class="pourcentage-quality">{{ data.value.twoYearsPourcent }}%</span>
+              </div>
+              <i class="fas fa-arrow-right fa-lg"></i>
+              <div class="box-quality">
+                  <span class="periode-quality"> < 1 an </span>
+                  <div class="trait-jaune-quality"></div>
+                  <span class="nb-contact-quality"> {{ data.value.oneyear }} contacts</span>
+                  <span class="pourcentage-quality">{{ data.value.oneYearPourcent }}%</span>
+              </div>
+              <i class="fas fa-arrow-right fa-lg"></i>
+              <div class="box-quality">
+                  <span class="periode-quality"> < 6 mois </span>
+                  <div class="trait-vert-quality"></div>
+                  <span class="nb-contact-quality"> {{ data.value.sixmonths }} contacts</span>
+                  <span class="pourcentage-quality">{{ data.value.sixMonthsPourcent }}%</span>
+              </div>
+              <i class="fas fa-arrow-right fa-lg"></i>
+              <div class="box-quality">
+                  <span class="periode-quality"> < 3 mois </span>
+                  <div class="trait-vert-fonce-quality"></div>
+                  <span class="nb-contact-quality"> {{ data.value.threemonths }} contacts</span>
+                  <span class="pourcentage-quality">{{ data.value.threeMonthsPourcent }}%</span>
+              </div>
+          </div>
+      </div>
+  
+      <ng-template #loader>
+  
+          <div class="loader-quality-crm">
+        
+            <img src="../../assets/loader.gif" class="img-fluid">
+          </div>
+        </ng-template>
     </div>
   </div>
-</div>
