--- a/src/app/quality-crm/quality-crm.component.html
+++ b/src/app/quality-crm/quality-crm.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <div class="dash-window-block">
-      <div class="dash-stats-quality" *ngIf="loading == false; else loader">
+      <div class="dash-stats-quality">
           <div class="circle-quality">
               <div id="chart-circle"></div>
           </div>
